refactor: transition to Java 11 and spigot api 1.13 for wider minecraft version compatibility